[ADD] finish first box on home

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 	--color-secondary_text: #ffffff;
 	--color-logo_text: #ffffff;
 	--color-background: #e5e7eb;
+	--color-secondary_background: #FFFFFF;
 	--color-primary_button: #1c3fb7;
 	--color-secondary_button: #9ca3af;
 }
