--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Noto+Sans+Thai:wdth,wght@62.5..100,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Noto+Sans+Thai:wdth,wght@62.5..100,100..900&display=swap");
 
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @theme {
-	--font-noto: 'Noto Sans Thai', sans-serif;
-	--font-adlam: 'ADLaM Display', system-ui;
+	--font-noto: "Noto Sans Thai", sans-serif;
+	--font-adlam: "ADLaM Display", system-ui;
 	--color-primary_text: #000000;
 	--color-secondary_text: #ffffff;
 	--color-logo_text: #ffffff;
