--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
 	/* --color-primary_background: #00000040; */
 	--color-primary_background: #e5e7eb;
 	--color-secondary_background: #d5d8de;
+	--color-designcanvas_background: #ffffff33;
 }
 
 /* === Toast animation + utilities === */
